<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recyclerContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="0dp"
    tools:context=".fragments.BookListFragment">


    <LinearLayout
        android:id="@+id/linearLayoutSearchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_layout"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_scrollFlags="scroll|enterAlways"
            app:menu="@menu/top_menu"
            >


            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/search_bar"
                android:baselineAligned="false"
                android:focusedByDefault="false"
                android:paddingVertical="5dp"
                android:paddingRight="20dp"
                android:theme="@style/Search_view_theme"
                app:closeIcon="@drawable/round_close_24"
                app:commitIcon="@drawable/round_north_west_24"
                app:iconifiedByDefault="false"
                app:queryHint="@string/search"
                app:searchHintIcon="@drawable/round_search__white_24"
                app:searchIcon="@drawable/round_search__white_24" />

        </com.google.android.material.appbar.MaterialToolbar>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginTop="-4dp"
        android:indeterminate="true"
        android:progressTint="@color/primary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutSearchBar" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutSearchBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutPrincipale"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewPrincipale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_string"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:scaleType="fitCenter"
                android:src="@drawable/best_home_library_apps"
                app:layout_constraintBottom_toTopOf="@+id/textViewPrincipale"
                app:layout_constraintEnd_toEndOf="@+id/textViewPrincipale"
                app:layout_constraintStart_toStartOf="@+id/textViewPrincipale" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewBooks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
