<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewInfoProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/primary_color">

            <LinearLayout
                android:id="@+id/linearLayoutSearchBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbarMyProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:menu="@menu/top_menu_profile">


                </com.google.android.material.appbar.MaterialToolbar>

            </LinearLayout>


            <TextView
                android:id="@+id/textViewNoteModify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/not_modify"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9Modifica"
                app:layout_constraintVertical_bias="0.157" />

            <TextView
                android:id="@+id/textView9Modifica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="120dp"

                android:text="@string/modify_profile"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/currentEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="20dp"
                android:layout_marginBottom="88dp"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:layout_constraintBottom_toTopOf="@+id/textView9Modifica"
                app:layout_constraintEnd_toEndOf="@+id/textView9Modifica"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="@+id/textView9Modifica"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-50dp"
            android:background="@drawable/white_square"
            android:orientation="vertical"
            android:paddingTop="50dp">

            <TextView
                android:id="@+id/textViewemailAddr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:text="@string/email"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:background="@drawable/custom_edittext_border"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/email_visualize"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/black" />


            <TextView
                android:id="@+id/textViewPassEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:text="@string/password"
                android:textSize="20sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:background="@drawable/custom_edittext_border"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textViewPassConfirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:text="@string/conferm_new_password"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextPassword2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:background="@drawable/custom_edittext_border"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/password_confirmation"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/update_button_frag"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/btn_background_2"
                android:backgroundTint="@color/primary_color"
                android:text="@string/update"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/deleteButton"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/btn_background_2"
                android:backgroundTint="@color/primary_color"
                android:text="@string/delete"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>

</ScrollView>
