<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bookListFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"/>

    <item
        android:id="@+id/myBooksFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:icon="@drawable/baseline_book_24"
        android:title="@string/books"/>

    <item
        android:id="@+id/myReviewsFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:icon="@drawable/round_rate_review_24_purple"
        android:title="@string/reviews"/>

    <item
        android:id="@+id/notificationsFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:icon="@drawable/baseline_notifications_24"
        android:title="@string/notifications"/>


    <item
        android:id="@+id/profileInfoFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile"/>

</menu>