<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/loginbkg"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_edittext"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/primary_color"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/EditTextSearch"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:padding="8dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/primary_color"
                android:text="@string/login"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

            <TextView
                android:id="@+id/textViewAlternativeReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="110dp"
                android:layout_marginTop="12dp"
                android:text="@string/login_with"
                android:textColor="#3C3C3C"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/regButtonLayReg" />

            <ImageView
                android:id="@+id/googleReg"
                android:layout_width="114dp"
                android:layout_height="57dp"
                android:layout_marginStart="95dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewAlternativeReg"
                app:srcCompat="@drawable/google_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewNotRegistered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/not_yet_registered"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/googleReg" />

                <TextView
                    android:id="@+id/textViewRegFromLog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/reg_now"
                    android:textColor="#03A9F4"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.08"
                    app:layout_constraintStart_toEndOf="@+id/textViewAlreadyRegistered"
                    app:layout_constraintTop_toBottomOf="@+id/googleReg" />

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>