...
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/loginButtonWelcPage"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/primary_color"
        android:text="@string/login"
        android:textSize="18sp"
...
